--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <!-- <script crossorigin="anonymous" src="//unpkg.com/react-scan/dist/auto.global.js"></script> -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Sipan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Calculadora - INTA</title>
   </head>
   <body>
     <div id="root"></div>
