--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Sipan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculadora - INTA</title>
+    <title>SIPAN - Calculadoras de Costos Agrícolas </title>
   </head>
   <body>
     <div id="root"></div>
