fix: svg for icons & SEO

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
-    <!-- <script crossorigin="anonymous" src="//unpkg.com/react-scan/dist/auto.global.js"></script> -->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Sipan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="SIPAN - utilizá calculadoras de costos agrícolas para optimizar la producción y mejorar la rentabilidad de tu producción" />
     <title>SIPAN - Calculadoras de Costos Agrícolas </title>
   </head>
   <body>
